fix: adjust spacing

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -253,7 +253,7 @@ article {
 .now__topper h2 {
   font-size: var(--font-size-xl);
   line-height: 0;
-  margin-top: 1rem;
+  margin-top: .5rem;
   margin-bottom: 1rem;
 }
 
